异想博客个性化定制

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,7 +1,8 @@
 {{- define "content" -}}
   <section id="posts" class="posts">
+    <!-- "Type" "改为自己想展示的路径" -->
     {{/* (index .Site.Paginate) */}}
-    {{- $paginator := .Paginate (where (where .Data.Pages "Type" "post") ".Params.hiddenfromhomepage" "!=" true) }}
+    {{- $paginator := .Paginate (where (where .Data.Pages "Type" "blog") ".Params.hiddenfromhomepage" "!=" true) }}
     {{- range $paginator.Pages -}}
       {{ .Render "summary" }}
     {{ end -}}
