--- a/src/css/_variables.scss
+++ b/src/css/_variables.scss
@@ -5,7 +5,7 @@
 // ========== Theme Color ========== //
 // Config here to change theme color
 // Default | Mint Green | Cobalt Blue | Hot Pink | Dark Violet
-$theme-color-config: 'Default';
+$theme-color-config: 'Jfz Blue Plus';
 
 // Default theme color map
 $theme-color-map: (
@@ -13,6 +13,10 @@ $theme-color-map: (
   'Mint Green': #16982B #f5f5f5,
   'Cobalt Blue': #0047AB #f0f2f5,
   'Hot Pink': #FF69B4 #f8f5f5,
+  'Jfz Blue': #51ADED #f0f2f5,
+  'Jfz Blue Plus': #1792E3 #f0f2f5,
+  'Jfz Green': #46B88B #f5f5f5,
+  'Zima Blue': #41C8F9 #f5f5f5,
   'Dark Violet': #9932CC #f5f4fa
 );
 
@@ -46,7 +50,7 @@ $global-font-color: #34495e !default;
 $global-font-size: 16px !default;
 
 // Global width of '<body>'.
-$global-body-width: 800px !default;
+$global-body-width: 1300px !default;
 
 // Padding of container main
 $global-container-padding: 0 20px !default;
@@ -95,7 +99,8 @@ $header-padding: 20px 20px !default;
 $logo-font-size: 48px !default;
 
 // Font family of the logo.
-$logo-font-family: 'Chancery', cursive, LiSu, sans-serif !default;
+// $logo-font-family: 'Chancery', cursive, LiSu, sans-serif !default;
+$logo-font-family: "Helvetica Neue",Helvetica,Arial,"Microsoft Yahei","Hiragino Sans GB","Heiti SC","WenQuanYiMicro Hei",sans-serif !default;
 
 // Margin of menu item.
 $menu-item-margin-left: 10px !default;
